# comando-boto

./: .gitignore  cuda_check.py  install.ps1  pyproject.toml  train.ps1  train.py  train2.py
api/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
api/http_api/: __init__.py
api/tasks/: __init__.py  docker_tasks.py  lint_tasks.py  serve_tasks.py  typecheck_tasks.py
data/: inventory.csv
training/: config.yml  convert.ps1  convert.py  magic-word.json  pyproject.toml  train2.ps1
training/tasks/: __init__.py
