[project]
name = "commando-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.6"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "peft>=0.17.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "trl==0.19.1",
    "unsloth>=2025.7.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
